src/scss/layout/_video.scss
@use 'base/variables' as v;
@use 'base/mixins' as m;

.video{
    position: relative;
    max-height: 54rem;
    min-height: 39rem;
    overflow: hidden;
    
    .overlay{
        position: absolute;
        height: 100%;
        width: 100%;
        background: linear-gradient(0deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.65) 100%);
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    video{
        display: block;
        width: auto;
        @include m.tablet{
            width: 100%;
        }
    }
}

.contenido-video{
    
    h2{
        color: v.$blanco;
        font-size: 4rem;
        margin: 0;
        margin-top: 20rem;
        @include m.tablet{
            font-size: 7rem;
            margin-top: 5rem;
        }
        @include m.telefono{
            font-size: 5rem;
            margin: 0;
        }
    }

    p{
        color: v.$blanco;
        display: inline-block;
        padding: 1rem 2rem;
        font-weight: 500;
        font-size: 1.7rem;
        margin: 0;

        @include m.desktop{
            font-size: 2.7rem;
        }

        @include m.tablet{
            font-size: 2rem;
        }

       
    }
}

button{
    background-color: v.$sorbus100;
    color: v.$blanco;
    width: 12rem;
    height: 6rem; 
    border: none;
    margin-top: 1rem;
    margin-bottom: 17rem;
    font-size: 2.5rem;
    font-weight: 600;
    cursor: pointer;
    transition: .5s;
    &:hover{
        background-color: v.$sorbus600;
    a{
        color: v.$blanco;
        transition: .2s;
    }
    }
    a{
        color: v.$negro;
        text-align: center;
    }
}
@include m.tablet{
    h2{
        font-size: 5rem;
    }
    p{
        font-size: 1.8rem;
    }
    button{
        width: 20rem;
        height: 5rem;
        font-size: 2.5rem;
        margin-bottom: 0;
    }
    
}

@include m.telefono{
    button{
        width: 20rem;
        height: 5rem;
        font-size: 2.5rem;
        margin-bottom: 0;
    }
}

